fix: better handle visible scrollbars

--- a/src/renderer/scss/FolderPicker.scss
+++ b/src/renderer/scss/FolderPicker.scss
@@ -18,6 +18,8 @@
     height:fit-content;
     .bp4-menu {
         color-scheme: normal;
+        overflow-y: auto;
+        scrollbar-gutter: stable;
         max-height: 400px;
         height: 100%;
     }
